--- a/index.html
+++ b/index.html
@@ -608,9 +608,7 @@
         </div>
       </div>
 
-      <div class="open-text" id="openText">
-        Klik "OPEN ME" untuk membuka surprise!
-      </div>
+      <div class="open-text" id="openText">Klik Untuk Membuka Amplop</div>
     </div>
 
     <script>
